# bioristor-lib

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
bioristor-lib/: Cargo.toml  build.rs
bioristor-lib/src/: lib.rs  losses.rs  params.rs
bioristor-lib/src/algorithms/: adaptive.rs  adaptive2.rs  brute_force.rs  gradient_descent.rs  mod.rs  neural_network.rs  newton.rs
bioristor-lib/src/models/: equation.rs  mod.rs  system.rs
bioristor-lib/src/utils/: best_ordered_list.rs  float_range.rs  mod.rs
nucleo-f767zi/: Cargo.toml  build.rs  memory.x  openocd.cfg
nucleo-f767zi/.cargo/: config.toml
nucleo-f767zi/src/: main.rs
nucleo-l476rg/: Cargo.toml  memory.x  openocd.cfg
nucleo-l476rg/.cargo/: config.toml
nucleo-l476rg/src/: main.rs
profiler/: Cargo.toml
profiler/src/: lib.rs
src/: lib.rs  losses.rs  model.rs  params.rs
src/algorithms/: adaptive.rs  brute_force.rs  mod.rs
src/utils/: best_ordered_list.rs  float_range.rs  mod.rs
