[package]
name = "bioristor-nucleo-f767zi"
version = "0.1.0"
authors = ["Francesco Saccani <francesco.saccani@unipr.it>"]
edition = "2021"

[[bin]]
name = "bioristor-nucleo-f767zi"
test = false
bench = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
stm32f7xx-hal = { version = "0.7", features = ["stm32f767", "rt"] }
panic-probe ={ version = "0.3", features = ["print-defmt"] }

bioristor-lib = { path = "../bioristor-lib", features = ["defmt"] }