[package]
name = "bioristor-nucleo-l476rg"
version = "0.1.0"
authors = ["Francesco Saccani <francesco.saccani@unipr.it>"]
edition = "2021"

[[bin]]
name = "bioristor-nucleo-l476rg"
test = false
bench = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
stm32l4xx-hal = { version = "0.7", features = ["stm32l476", "rt"] }
panic-probe ={ version = "0.3", features = ["print-defmt"] }

bioristor-lib = { path = "../bioristor-lib", features = ["defmt"] }